--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <p>This is new repositary.</p>
 <p>This is a new feature</p>
-<p>This is a new feature added</p>
+<p>This is a new feature added (button)</p>
