--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <p>This is new repositary.</p>
 <p>This is a new feature</p>
 <p>This is a new feature added (dropdown)</p>
-<p>This is a new feature added (button)</p>
+<p>This is a new feature added (buttons)</p>
 
